opam-version: "2.0"
authors: [ "Ta-Chu Kao" ]
license: "MIT"
homepage: "https://github.com/tachukao/owl-arpack"
dev-repo: "git+https://github.com/tachukao/owl-arpack.git"
bug-reports: "https://github.com/tachukao/owl-arpack/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "ctypes"
  "arpack"
]
synopsis: "OCaml Bindings to ARPACK with OWL"
description: "OCaml Bindings to ARPACK with OWL"
